--- a/java-kafka-examples/pom.xml
+++ b/java-kafka-examples/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>kafka-clients</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-streams</artifactId>
+			<version>2.2.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
